# pic-upv-lab5-finalproject

./: FInal_Project_Sergi_Nàcher_Muñoz copia.ipynb  FInal_Project_Sergi_Nàcher_Muñoz.ipynb  SOI-w450-h220-clad600.txt  pyproject.toml  test_gds_chip.gds
.cache/: WaveguideCoupler_042bf8448486c118.npz  WaveguideCoupler_0c4d7ac9cfaffa37.npz  WaveguideCoupler_10493d16665b8e9a.npz  WaveguideCoupler_1603419afa27ed52.npz  WaveguideCoupler_1f676b3e3cdc3ca7.npz  WaveguideCoupler_250f190ac7b9b2c4.npz  WaveguideCoupler_261db4b72fc32be4.npz  WaveguideCoupler_2cee9e3deca31a06.npz  WaveguideCoupler_306c7733580fe28c.npz  WaveguideCoupler_3696ec956eb0230f.npz  WaveguideCoupler_4e2bfb25e6071660.npz  WaveguideCoupler_530bda09061f989e.npz  WaveguideCoupler_5f82dc8d652db558.npz  WaveguideCoupler_660de09a3dd0daea.npz  WaveguideCoupler_67c7171084ceb275.npz  WaveguideCoupler_74058f041f0e98c3.npz  WaveguideCoupler_7e2e075e792c0f71.npz  WaveguideCoupler_8454825389f2ad10.npz  WaveguideCoupler_8624df0371ac4f19.npz  WaveguideCoupler_89a2ac98e5d74980.npz  WaveguideCoupler_9bb224a15e7cbbc4.npz  WaveguideCoupler_a2076d76b6295812.npz  WaveguideCoupler_b6c3d27b59df5e01.npz  WaveguideCoupler_d18367eb2117f27e.npz  WaveguideCoupler_d917a2cce15c4cc1.npz  WaveguideCoupler_ded4cb8ab39471ab.npz  WaveguideCoupler_e5843c1a74c1c8a1.npz  WaveguideCoupler_ebadb77c8eda5d6d.npz  WaveguideCoupler_f3686ce013f98099.npz  WaveguideCoupler_f48c3e9a1dba7814.npz  WaveguideCoupler_fbfb84689a0552b5.npz  Waveguide_02c746bc83f9bdf2.npz  Waveguide_0354125432bc1ee7.npz  Waveguide_08bb52f0abd6d1f8.npz  Waveguide_0990c30e6a52f166.npz  (+103 more)
(+48 files in other folders)
